--- a/file.html
+++ b/file.html
@@ -26,7 +26,7 @@
   </style>
 	
 </head>
-<body>
+<body style="background-color:#212529">
 
 <nav class="navbar navbar-inverse navbar-expand-sm">
         ...
@@ -54,8 +54,8 @@
 </nav>
 
 <div class="container text-center ">
-    <div class="row p-2 mt-1 mb-4 border border-dark rounded-5 ">
-		<div class=" p-5 bg-dark text-white rounded-5 ">
+    <div class="row p-2 mt-1 mb-4 border rounded-5 " style="border-color:#FFC107" >
+		<div class=" p-5  text-black rounded-5 " style="background-color:#FFC107">
             <h1>Hi There!!! I'm Jechel Ramirez.</h1>
             <p>"Anime are not just a TV show like cartoons. Anime are epic stories which will never dies" - Otaku </p>
         </div>
